tests/assets/syntaxerrorpackage/foo/one.py
# Some comment
x = 1


fromb . import three

from . import two